Temporary fix for backgrounds being same on mobile

--- a/files/css/style.css
+++ b/files/css/style.css
@@ -977,6 +977,9 @@ hr {
   left: 20px;
   height: 100px !important;
 }
+.fix-jarallax {
+  transform: translateY(0) translateZ(0) !important;
+}
 .edge-compatibility {
   transform: translateY(0) translateZ(0) !important;
   /*top: 210px !important;*/
@@ -1300,6 +1303,9 @@ hr {
   .navbar-default .container .navbar-header .logo-img {
     z-index: -1;
   }
+  .insta .jarallax {
+    height: 100vh;
+  }
 }
 @media (max-width: 767px) {
   .mobileHide .name-header {
@@ -1389,7 +1395,7 @@ hr {
   }
   .samples.no-margin .jarallax {
     height: 145vh;
-  }
+  } 
 }
 @media all and (max-width: 479px) {
   .navbar-toggle {
@@ -1421,7 +1427,7 @@ hr {
     margin-bottom: 50px;
   }
   .jarallax {
-    height: 200vh;
+    height: 180vh;
   }
 /*  .testimonials .jarallax {
     height: 480vh;
